# aptos-move-graphql-test

./: README.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
frontend/public/: manifest.json
frontend/src/: constants.tsx
frontend/src/api/: index.ts
frontend/src/api/hooks/: useGetAccountResource.ts  useGetOverallColor.ts
frontend/src/apiv2/: codegen.ts
frontend/src/apiv2/queries/: getAccountResource.graphql
frontend/src/food/: codegen.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/HomePage/: index.tsx
move/: Move.toml  schema.graphql
move/sources/: food.move
python/: config.yaml  generated_schema_types.py  main.py  pyproject.toml
rust/: .gitignore  Cargo.toml
rust/src/: main.rs
